apps/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: 9696
      protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: byparr
  namespace: prowlarr
  labels:
    app: byparr
spec:
  selector:
    app: byparr
  ports:
    - name: http
      port: 8191
      targetPort: 8191
      protocol: TCP
  type: ClusterIP
