apps/prowlarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: prowlarr
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
  tls:
    secretName: prowlarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-http
  namespace: prowlarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prowlarr.lab.jackhumes.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: prowlarr
          port: 9696
